--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
   <body>
     <p class="flash"><%= flash.notice %></p>
-    <%= yield %>
+    <div id="main-container" class="container-fluid">
+      <%= render partial: 'layouts/header' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
