--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -4,15 +4,12 @@
       <li><%= error %></li>
   <% end %>
   </ul>
-  <p>
-    <%= f.label :title %><br  />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :body %><br  />
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+<div class="input-group">
+  <%= f.text_field :title, class: "form-control", placeholder: "Title"%>
+</div>
+
+<div class="input-group">
+  <%= f.text_area :body, class: "form-control", placeholder: "Body" %>
+</div>
+    <%= f.submit class: "btn btn-default" %>
 <% end %>
