--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <p class="flash"><%= flash.notice %></p>
-    <div id="main-container" class="container-fluid">
+    <div id="main-container" class="container">
       <%= render partial: 'layouts/header' %>
       <%= yield %>
     </div>
