--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,5 @@
-<h1> Create a new article</h1>
+<div class="page-header">
+  <h1> Create a new article</h1>  
+</div>
 
 <%= render partial: 'shared/form' %>
