--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,20 @@
-<h3>Post a comment</h3>
 
-<%= form_for [ @article, @comment ] do |f| %>
-  <p>
-    <%= f.text_field :author_name, class: "form-control", placeholder: "Your Name"%>
-  </p>
-  <p>
-    <%= f.text_area :body, class: "form-control", placeholder: "Your comment"%>
-  </p>
-  <p>
-    <%= f.submit 'Submit', class: 'btn btn-default' %>
-  </p>
-<% end %>
+<div class="panel panel-default">
+  <div class='panel-heading'>
+    Post a comment
+  </div>
+
+  <div class="panel-body">
+    <%= form_for [ @article, @comment ] do |f| %>
+      <p>
+        <%= f.text_field :author_name, class: "form-control", placeholder: "Your Name"%>
+      </p>
+      <p>
+        <%= f.text_area :body, class: "form-control", placeholder: "Your comment"%>
+      </p>
+      <p>
+        <%= f.submit 'Submit', class: 'btn btn-default' %>
+      </p>
+    <% end %>
+  </div>
+</div>
