--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,22 @@
-<nav class="navbar navbar-default">
-  <div class="container">
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li><%= link_to "Blogger", root_path, class: "navbar-brand" %></li>
-      <li><%= link_to "New Post", new_article_path %></li>
-      <li><%= link_to "All Posts", articles_path %></li>
     </ul>
+    <ul class= "nav navbar-nav navbar-right">
+      <li><%= link_to new_article_path do %>
+            <span class="glyphicon glyphicon-plus"></span>
+          <% end %>
+      </li>
+      <li><%= link_to articles_path do%>
+            <span class="glyphicon glyphicon-list"></span>
+            <% end %>
+      </li>
+      <li><%= link_to about_path do%>
+            <span class="glyphicon glyphicon-info-sign"></span>
+            <% end %>
+      </li>
+    </ul>
+
   </div>
 </nav>
