--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,15 +1,18 @@
-<%= form_for(@article) do |f| %>
-  <ul>
-  <% @article.errors.full_messages.each do |error| %>
-      <li><%= error %></li>
-  <% end %>
-  </ul>
-<div class="input-group">
-  <%= f.text_field :title, class: "form-control", placeholder: "Title"%>
-</div>
-
-<div class="input-group">
-  <%= f.text_area :body, class: "form-control", placeholder: "Body" %>
-</div>
-    <%= f.submit class: "btn btn-default" %>
-<% end %>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <%= form_for(@article, html: {class: 'form-horizontal'}) do |f| %>
+        <% @article.errors.full_messages.each do |error| %>
+            <li><%= error %></li>
+        <% end %>
+        <p>
+          <%= f.text_field :title, class: "form-control", placeholder: "Title" %>
+        </p>
+        <p>
+          <%= f.text_area :body, class: "form-control", placeholder: "Body" %>
+        </p>
+        <p>
+          <%= f.submit class: "btn btn-default" %>
+        </p>
+      <% end %>
+    </div>
+  </div>
