--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,8 +28,18 @@
   margin: 1em;
 }
 
+.tags {
+  float: none;
+}
+
 // labels
 
 .comment-label {
+  float: right;
+}
+
+// icons
+
+.delete-tag-icon {
   float: right;
 }
