--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,10 @@
             <span class="glyphicon glyphicon-list"></span>
             <% end %>
       </li>
+      <li><%= link_to tags_path do%>
+            <span class="glyphicon glyphicon-tags"></span>
+            <% end %>
+      </li>
       <li><%= link_to about_path do%>
             <span class="glyphicon glyphicon-info-sign"></span>
             <% end %>
