--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -11,6 +11,9 @@
           <%= f.text_area :body, class: "form-control", placeholder: "Body" %>
         </p>
         <p>
+          <%= f.text_field :tag_list, class: "form-control", placeholder: "Tag List" %>
+        </p>
+        <p>
           <%= f.submit class: "btn btn-default" %>
         </p>
       <% end %>
