Add image upload

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1> Create a new article</h1>  
+  <h1> Create a new article</h1>
 </div>
 
-<%= render partial: 'shared/form' %>
+<%= render partial: 'articles/form' %>
