--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,6 @@
   <div class="panel panel-default">
     <div class="panel-body">
-      <%= form_for(@article, html: {class: 'form-horizontal'}) do |f| %>
+      <%= form_for(@article, html: {class: 'form-horizontal', multipart: true}) do |f| %>
         <% @article.errors.full_messages.each do |error| %>
             <li><%= error %></li>
         <% end %>
@@ -12,6 +12,13 @@
         </p>
         <p>
           <%= f.text_field :tag_list, class: "form-control", placeholder: "Tag List" %>
+        </p>
+        <p>
+          <% if @article.image.exists? %>
+            <%= image_tag @article.image.url %><br />
+          <% end %>
+          <%= f.label :image, "Attach an image" %><br />
+          <%= f.file_field :image %>
         </p>
         <p>
           <%= f.submit class: "btn btn-default" %>
