--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
 
 <div class="panel panel-default">
   <div class="panel-body">
-    This simple blogging site was made using Ruby on Rails and Bootstrap.
+    This simple blogging site was made by Andrew using Ruby on Rails and Bootstrap.
     You can view the source on <%= link_to "Github", "https://github.com/ajzeller/rails_blogger" %>.
-  </div>  
+  </div>
 </div>
